--- a/config.json
+++ b/config.json
@@ -1,22 +1,3 @@
 {
-    "token": "",
-    "proxy": false,
-    "nuke": {
-        "channels_name": [
-            "",
-            "",
-            "",
-            ""
-        ],
-        "roles_name": [
-            "",
-            "",
-            ""
-        ],
-        "messages_content": [
-            "",
-            "",
-            ""
-        ]
-    }
+    "proxy": false
 }
